Move documentation from INSTALL to README